# tailapi

./: .envrc  CNAME  flake.nix  index.html  makefile  nix.org  passtest.nix  pyproject.toml  setup.py  shell.nix  tailapi.py  test.py  tests.org  valiant.yaml
tailapi/: __init__.org  __init__.py  api.py  deprecated.org.bak  device.py  group.py  key.py  miscellaneous.py  object.py  policy.py  server.py  tailapi.hy  tailapi.org  tailapi.py  tailnet.py  transformer.py
tests/: conftest.py  test_create_delete.py  test_filter.py  test_no_test.py  test_policy.py
